--- a/config/config.yml
+++ b/config/config.yml
@@ -17,7 +17,7 @@ postgres:
   url: "postgres://user:pass@localhost:5432/postgres"
 
 kafka:
-  brokers: ["localhost:9092", "localhost:9093"]
+  brokers: ["localhost:9092"]
   groupID: go-kafka
   initTopics: true
 
