--- a/logstash.conf
+++ b/logstash.conf
@@ -9,13 +9,18 @@ input {
 filter {
   mutate {
     add_field => {
-      "AggregateID" => "%{[AggregateID]}"
+      "AggregateID" => "%{AggregateID}"
     }
-    add_field => {
-      "EventType" => "%{[EventType]}"
+    split {
+      add_field => {
+        "EventType" => "%EventType"
+      }
     }
     add_field => {
       "Data" => "%{[Data]}"
+    }
+    add_field => {
+      "Timestamp" => "%{Timestamp}"
     }
   }
 }
@@ -31,5 +36,13 @@ output {
     password => "password"
     action => "index"
     index => "tasksindex"
+  }
+
+  kafka { 
+    bootstrap_servers => "kafka1:29092"
+    codec => plain {
+        format => "%{message}"
+    }
+    topic_id =>  "%{[EventType][0]}"
   }
 }
