--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DISABLE_SWAGGER_HTTP_HANDLER=true
 GIN_MODE=release
 PG_URL=postgres://user:pass@localhost:5432/postgres
+MYSQL_URL=mysql://mysql:password@tcp(localhost:3306)/local
 RMQ_URL=amqp://guest:guest@localhost:5672/
