feat: update Makefile and docker compose

--- a/logstash_1.conf
+++ b/logstash_1.conf
@@ -15,8 +15,11 @@ output {
     codec => json_lines  
   }
 
-  # jdbc {
-  #   connection_string => "jdbc:mysql://mysql:3306/local?user=mysql&password=password"
-  #   statement => ["INSERT INTO tasks(event_type, data) values(?,?)", "EventType", "Data"]
+  # analyticdb {
+  #   driver_jar_path => "/opt/jar/mysql-connector-java-8.0.21.jar"
+  #   driver_class => "com.mysql.jdbc.Driver"
+  #   connection_string => "jdbc:mysql://localhost:3306/local?user=mysql&password=password&useUnicode=true&characterEncoding=utf8&useSSL=false"
+  #   statement => ["INSERT INTO tasks(aggregate_type, aggregate_id, event_type, data) values(?,?)", "AggregateType", "AggregateID", "EventType", "Data"]
+  #   commit_size => 4194304
   # }
 }
