--- a/logstash_1.conf
+++ b/logstash_1.conf
@@ -15,6 +15,13 @@ output {
     codec => json_lines  
   }
 
+# jdbc {
+#   driver_jar_path => "/opt/jar/mysql-connector-java-8.0.15.jar"
+#   driver_class => "com.mysql.jdbc.Driver"
+#   connection_string => "jdbc:mysql://localhost:3306/local?user=mysql&password=password"
+#   statement => ["INSERT INTO tasks(aggregate_type, aggregate_id, event_type, data) values(?,?,?,?)", "AggregateType", "AggregateID", "EventType", "Data"]
+# }
+
   # analyticdb {
   #   driver_jar_path => "/opt/jar/mysql-connector-java-8.0.21.jar"
   #   driver_class => "com.mysql.jdbc.Driver"
